--- a/vercel.json
+++ b/vercel.json
@@ -8,26 +8,13 @@
     ],
     "routes": [
       {
-        "src": "/api/products",
-        "dest": "/index.js"
-      },
-      {
-        "src": "/api/purchase",
-        "dest": "/index.js"
-      },
-      {
-        "src": "/api/purchase/:id",
-        "dest": "/index.js"
-      },
-      {
-        "src": "/api/purchase/:email",
-        "dest": "/index.js"
-      },
-      {
         "src": "/(.*)",
-        "dest": "/index.js",
+        "dest": "/",
         "methods": ["GET", "POST", "PUT", "DELETE"]
+
       }
     ]
   }
+
+
   
